<resources>
    <string name="app_name">AutoWish</string>

    <string name="login">Login</string>
    <string name="login_otp">Login Using OTP</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="hint_login">Email-ID</string>
    <string name="enter_phoneno">Enter your mobile number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="hint_password">********</string>
    <string name="submit">Submit</string>
    <string name="address">Location</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="choose_pass">Enter Password</string>
    <string name="re_choose_pass">Re-enter Password</string>
    <string name="signup">Sign Up</string>
    <string name="re_send">Re-send</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="msg">Message</string>
    <string name="update">Update</string>


    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help and Support</string>
    <string name="menu_follower">Followers</string>
    <string name="menu_about">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_explore">Explore</string>
    <string name="menu_notif">Notification</string>
    <string name="menu_chat">Chats</string>
    <string name="menu_sell">Sell</string>
    <string name="menu_myads">My Ads</string>
    <string name="menu_account">My Account</string>
    <string name="processing_dilaog">Loading.........</string>

    <string name="verification_failed">Verification Failed! Please try again later</string>
    <string name="invalid_code">Invalid code.</string>
    <string name="enter_otp_warn">Please enter OTP</string>
    <string name="server_error">Server Error, please try again.</string>
    <string name="mandatory_fiels">All fields are required</string>
    <string name="internetconnection">Please check you internet connection</string>
    <string name="enter_phone">Please enter phone number</string>
    <string name="valid_phone">Please enter valid phone number</string>

    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>

    <string name="demo_descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s,
    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s, </string>
    <string name="demo_name">Danial Jonson</string>
    <string name="demo_first">Danial</string>
    <string name="demo_last">Jonson</string>
    <string name="demo_email">Jonsond@gmail.com</string>
    <string name="demo_dob">12 Jan 1993</string>"
    <string name="demo_gender">Female</string>"
    <string name="demo_bike_name">Activa 5g</string>
    <string name="demo_bike_price">INR 70 per hour</string>
    <string name="demo_bike_price_extend">+5 extra per km after 2 hours</string>
    <string name="demo_loc">32,Holy road, Ludhiana,Punjab</string>
    <string name="change_phone">Change Phone Number</string>
    <string name="share_number">Share phone number to others?</string>
    <string name="allow_notification">Allow Notifications</string>
    <string name="delete_account">Delete Account</string>

    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="allow_notify">Notify me when vehicle is available?</string>
    <string name="price_perhour">Price per hour(applicable after fixed hours)</string>
    <string name="delay_cost">Delay Cost</string>
    <string name="request">Request</string>
    <string name="add_ads">What you are offering?</string>

    <string name="vehicle_type">Select vehicle type</string>

    <string name="color">Color</string>
    <string name="model_name">Model Name</string>
    <string name="carNumber">Car Number</string>
    <string name="compnay_name">Company Name</string>
    <string name="fuelType">Fuel Type</string>
    <string name="makeYear">Manufacture Year</string>
    <string name="transmission">Transmission</string>
    <string name="next">Next</string>
    <string-array name="fuel_type">
        <item>Petrol</item>
        <item>Disel</item>
        <item>Electric</item>
    </string-array>

    <string-array name="v_color">
        <item>Red</item>
        <item>Blue</item>
        <item>Silver</item>
        <item>Gold</item>
    </string-array>
</resources>
