<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".UIFragments.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_15">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_edit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:padding="@dimen/padding_3"
                android:src="@drawable/edit" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/user"
                app:civ_border_color="@color/app_color_purple"
                app:civ_border_width="2dp" />
        </FrameLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            //first name

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".3"
                    android:layout_height="wrap_content"
                    android:text="@string/firstname"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/label_text_size_15" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_first"
                    android:textColor="@color/black"
                    android:textSize="@dimen/label_text_size_15" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/light_gray"
                android:alpha=".2"
                android:layout_height="1dp"/>

            //last name

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".3"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/label_text_size_15" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_last"
                    android:textColor="@color/black"
                    android:textSize="@dimen/label_text_size_15" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/light_gray"
                android:alpha=".2"
                android:layout_height="1dp"/>


            //email

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".3"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/label_text_size_15" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/label_text_size_15" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/light_gray"
                android:alpha=".2"
                android:layout_height="1dp"/>

            //dob

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".3"
                    android:layout_height="wrap_content"
                    android:text="@string/dob"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/label_text_size_15" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_dob"
                    android:textColor="@color/black"
                    android:textSize="@dimen/label_text_size_15" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/light_gray"
                android:alpha=".2"
                android:layout_height="1dp"/>

            //gender

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".3"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/label_text_size_15" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_gender"
                    android:textColor="@color/black"
                    android:textSize="@dimen/label_text_size_15" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/light_gray"
                android:alpha=".2"
                android:layout_height="1dp"/>


            //currrent loc

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".3"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/label_text_size_15" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_loc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/label_text_size_15" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>