<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".UIFragments.NotificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/app_color_purple"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="30dp"
            android:src="@drawable/back_white"
            android:padding="@dimen/padding_5"
            android:layout_height="30dp"/>

        <TextView
            android:text="@string/menu_settings"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/label_text_size_17"
            android:padding="@dimen/padding_10"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="30dp"
            android:padding="@dimen/padding_5"
            android:layout_height="30dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/change_phone"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text_size_17"
                android:padding="@dimen/padding_15"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/light_gray"
                android:alpha=".4"
                android:layout_height="1dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/app_color_green"
                android:checked="true"
                android:padding="@dimen/padding_15"
                android:text="@string/share_number"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text_size_17"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/light_gray"
                android:alpha=".4"
                android:layout_height="1dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/app_color_green"
                android:checked="false"
                android:padding="@dimen/padding_15"
                android:text="@string/allow_notification"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text_size_17"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/light_gray"
                android:alpha=".4"
                android:layout_height="1dp"/>

            <TextView
                android:text="@string/delete_account"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text_size_17"
                android:padding="@dimen/padding_15"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>