<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".UIFragments.NotificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color_purple"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="@dimen/padding_5"
            android:src="@drawable/back_white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/label_text_size_17" />

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="@dimen/padding_5" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_20">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/user"
                    app:civ_border_color="@color/app_color_purple"
                    app:civ_border_width="2dp" />
                //first name

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@drawable/bg_round_corner"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/firstname"
                        android:padding="@dimen/padding_15"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_gray"
                        android:textSize="@dimen/label_text_size_15" />
                </LinearLayout>


                //last name

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@drawable/bg_round_corner"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/lastname"
                        android:padding="@dimen/padding_15"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_gray"
                        android:textSize="@dimen/label_text_size_15" />
                </LinearLayout>


                //email

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@drawable/bg_round_corner"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/email_address"
                        android:padding="@dimen/padding_15"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_gray"
                        android:textSize="@dimen/label_text_size_15" />
                </LinearLayout>


                //dob

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@drawable/bg_round_corner"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/dob"
                        android:padding="@dimen/padding_15"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_gray"
                        android:textSize="@dimen/label_text_size_15" />
                </LinearLayout>

            //gender

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/bg_round_corner"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/gender"
                    android:padding="@dimen/padding_15"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_gray"
                    android:textSize="@dimen/label_text_size_15" />

            </LinearLayout>

                //current loc

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@drawable/bg_round_corner"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/address"
                        android:padding="@dimen/padding_15"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_gray"
                        android:textSize="@dimen/label_text_size_15" />
                </LinearLayout>

                //submit

                <LinearLayout
                    android:id="@+id/linear_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_15"
                    android:layout_marginTop="@dimen/margin_15"
                    android:background="@drawable/bg_background_purple">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingLeft="@dimen/padding_40"
                        android:paddingRight="@dimen/padding_40"
                        android:paddingTop="8dp"
                        android:text="@string/update"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/label_text_size_15" />
                </LinearLayout>
            </LinearLayout>
    </ScrollView>
</LinearLayout>