<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".HelpSupportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color_purple"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="@dimen/padding_5"
            android:src="@drawable/back_white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:text="@string/menu_help"
            android:textColor="@color/white"
            android:textSize="@dimen/label_text_size_17" />

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="@dimen/padding_5" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/margin_15"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/bg_round_corner"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:padding="@dimen/padding_3">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="phone"
                    android:padding="@dimen/padding_edittext"
                    android:textColor="@color/black"
                    android:textColorHint="@color/edit_text_hint"
                    android:textSize="@dimen/edit_text_size" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/bg_round_corner"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:padding="@dimen/padding_3">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@null"
                    android:hint="@string/msg"
                    android:gravity="top"
                    android:inputType="phone"
                    android:padding="@dimen/padding_edittext"
                    android:textColor="@color/black"
                    android:textColorHint="@color/edit_text_hint"
                    android:textSize="@dimen/edit_text_size" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_15"
                android:background="@drawable/bg_background_purple"
                android:elevation="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="@dimen/padding_40"
                    android:paddingRight="@dimen/padding_40"
                    android:paddingTop="8dp"
                    android:text="@string/submit"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/label_text_size_15" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>